clusters/talos-ottawa/apps/media/app/jellyseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr:preview-OIDC
          ports:
            - name: http
              containerPort: 5055
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
            - name: logs-volume
              mountPath: /app/config/logs
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: jellyseerr-config 
        - name: logs-volume
          emptyDir: {}
