clusters/talos-ottawa/apps/media/app/jellyseerr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr
  namespace: media
  annotations:
    item.homer.rajsingh.info/name: "Jellyseerr"
    item.homer.rajsingh.info/subtitle: "Media Request Manager"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/jellyseerr.svg"
    item.homer.rajsingh.info/keywords: "requests, media, jellyfin"
    service.homer.rajsingh.info/name: "Media"
    service.homer.rajsingh.info/icon: "fas fa-tv"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: home
  hostnames:
    - "jellyseerr.${COMMON_DOMAIN}"
    - "jellyseerr.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: jellyseerr
          port: 5055
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
